--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 hyper = "1.5.2"
 pgp = "0.14.2"
 rand = "0.8.5"
+serde = "1.0.217"
+serde_json = "1.0.135"
 tokio = "1.43.0"
 
 [dev-dependencies]
