--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-http-body-util = "0.1.2"
-hyper = "1.5.2"
 pgp = "0.14.2"
 rand = "0.8.5"
 serde = "1.0.217"
 serde_json = "1.0.135"
 tokio = "1.43.0"
+warp = "0.3.7"
 
 [dev-dependencies]
 tempfile = "3.15.0"
