--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 [dependencies]
 pgp = "0.14.2"
 rand = "0.8.5"
-serde = "1.0.217"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.135"
-tokio = "1.43.0"
 warp = "0.3.7"
+tokio = { version = "1", features = ["full"] }
 
 [dev-dependencies]
 tempfile = "3.15.0"
