--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { version = "1", features = ["full"] }
 directories = "6.0.0"
 shellexpand = "3.1.0"
 path-absolutize = "3.1.1"
+regex = "1.11.1"
 
 [dev-dependencies]
 tempfile = "3.15.0"
