--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = { version = "0.4.41", features = ["serde"] }
 config = "0.15.13"
 directories = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
