--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2024"
 chrono = { version = "0.4.41", features = ["serde"] }
 config = "0.15.13"
 directories = "6.0.0"
+dirs = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
