--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ config = "0.15.13"
 directories = "6.0.0"
 dirs = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.9.2"
+
+[dev-dependencies]
+tempfile = "3.20.0"
