--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ chrono = { version = "0.4.41", features = ["serde"] }
 config = "0.15.13"
 directories = "6.0.0"
 dirs = "6.0.0"
+sequoia-openpgp = "2.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.9.2"
 
