--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,19 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 chrono = { version = "0.4.41", features = ["serde"] }
 config = "0.15.13"
 directories = "6.0.0"
 dirs = "6.0.0"
 fern = "0.7.1"
+jsonrpsee = { version = "0.25.1", features = ["server"] }
 log = "0.4.27"
 sequoia-openpgp = "2.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.141"
 sha2 = "0.10.9"
+tokio = { version = "1.46.1", features = ["full"] }
 toml = "0.9.2"
 
 [dev-dependencies]
