--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde_json = "1.0.141"
 sha2 = "0.10.9"
 tokio = { version = "1.46.1", features = ["full"] }
 toml = "0.9.2"
+walkdir = "2.5.0"
 
 [dev-dependencies]
 tempfile = "3.20.0"
