--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ dirs = "6.0.0"
 fern = "0.7.1"
 jsonrpsee = { version = "0.25.1", features = ["server"] }
 log = "0.4.27"
+regex = "1.11.1"
 sequoia-openpgp = "2.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
